--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     name: Build and test
-    runs-on: buildjet-4vcpu-ubuntu-2004
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
@@ -24,10 +24,3 @@ jobs:
     - run: npm install --prefix ./tracker
     - run: npm run lint --prefix ./assets
     - run: npm run check-format --prefix ./assets
-    - run: npm run deploy --prefix ./assets
-    - run: npm run deploy --prefix ./tracker
-    - name: Run BundleMon
-      run: npm run bundlemon --prefix ./assets
-      env:
-        BUNDLEMON_PROJECT_ID: "619e0b6ad4a54a00089861ac"
-        CI_COMMIT_SHA: ${{github.event.pull_request.head.sha || github.sha}} # important!
