Update ua_inspector database

--- a/priv/ua_inspector/short_codes.os_families.yml
+++ b/priv/ua_inspector/short_codes.os_families.yml
@@ -7,11 +7,29 @@
   - "MLD"
   - "MCD"
   - "YNS"
+  - "GRI"
+  - "HAR"
+  - "ADR"
+  - "CLR"
+  - "BOS"
+  - "REV"
+  - "LEN"
+  - "SIR"
+  - "RRS"
+  - "WER"
+  - "PIC"
+  - "ARM"
+  - "HEL"
+  - "BYI"
+  - "RIS"
+  - "PUF"
+  - "LEA"
+  - "MET"
+  - ""
 - "AmigaOS":
   - "AMG"
   - "MOR"
-- "Apple TV":
-  - "ATV"
+  - "ARO"
 - "BlackBerry":
   - "BLB"
   - "QNX"
@@ -22,6 +40,9 @@
   - "HAI"
 - "Chrome OS":
   - "COS"
+  - "CRS"
+  - "FYD"
+  - "SEE"
 - "Firefox OS":
   - "FOS"
   - "KOS"
@@ -34,6 +55,9 @@
   - "OS2"
 - "iOS":
   - "IOS"
+  - "ATV"
+  - "WAS"
+  - "IPA"
 - "RISC OS":
   - "ROS"
 - "GNU/Linux":
@@ -59,15 +83,88 @@
   - "SAF"
   - "ORD"
   - "TOS"
+  - "RSO"
+  - "DEE"
+  - "FRE"
+  - "MAG"
+  - "FEN"
+  - "CAI"
+  - "PCL"
+  - "HAS"
+  - "LOS"
+  - "DVK"
+  - "ROK"
+  - "OWR"
+  - "OTV"
+  - "KTV"
+  - "PUR"
+  - "PLA"
+  - "FUC"
+  - "PAR"
+  - "FOR"
+  - "MON"
+  - "KAN"
+  - "ZEN"
+  - "LND"
+  - "LNS"
+  - "CHN"
+  - "AMZ"
+  - "TEN"
+  - "CST"
+  - "NOV"
+  - "ROU"
+  - "ZOR"
+  - "RED"
+  - "KAL"
+  - "ORA"
+  - "VID"
+  - "TIV"
+  - "BSN"
+  - "RAS"
+  - "UOS"
+  - "PIO"
+  - "FRI"
+  - "LIR"
+  - "WEB"
+  - "SER"
+  - "ASP"
+  - "AOS"
+  - "LOO"
+  - "EUL"
+  - "SCI"
+  - "ALP"
+  - "CLO"
+  - "ROC"
+  - "OVZ"
+  - "PVE"
+  - "RST"
+  - "EZX"
+  - "GNS"
+  - "JOL"
+  - "TUR"
+  - "QTP"
+  - "WPO"
+  - "PAN"
+  - "VIZ"
+  - "AZU"
+  - "COL"
+  - ""
 - "Mac":
   - "MAC"
 - "Mobile Gaming Console":
   - "PSP"
   - "NDS"
   - "XBX"
+- "OpenVMS":
+  - "OVS"
 - "Real-time OS":
   - "MTK"
   - "TDX"
+  - "MRE"
+  - "JME"
+  - "REX"
+  - "RXT"
+  - "KOL"
 - "Other Mobile":
   - "WOS"
   - "POS"
@@ -75,6 +172,8 @@
   - "TIZ"
   - "SMG"
   - "MAE"
+  - "LUN"
+  - "GEO"
 - "Symbian":
   - "SYM"
   - "SYS"
@@ -93,6 +192,13 @@
   - "IRI"
   - "T64"
   - "INF"
+  - "ELE"
+  - "GNX"
+  - "ULT"
+  - "NWS"
+  - "NXT"
+  - "SBL"
+  - ""
 - "WebTV":
   - "WTV"
 - "Windows":
@@ -103,3 +209,6 @@
   - "WCE"
   - "WRT"
   - "WIO"
+  - "KIN"
+- "Other Smart TV":
+  - "WHS"
