--- a/priv/ua_inspector/device.portable_media_player.yml
+++ b/priv/ua_inspector/device.portable_media_player.yml
@@ -9,18 +9,20 @@ Apple:
   regex: '(?:Apple-)?iPod'
   device: 'portable media player'
   models:
-    - regex: '(?:Apple-)?iPod1[C,]1'
+    - regex: '(?:Apple-)?iPod1[C,_]?1'
       model: 'iPod Touch 1G'
-    - regex: '(?:Apple-)?iPod2[C,]1'
+    - regex: '(?:Apple-)?iPod2[C,_]?1'
       model: 'iPod Touch 2G'
-    - regex: '(?:Apple-)?iPod3[C,]1'
+    - regex: '(?:Apple-)?iPod3[C,_]?1'
       model: 'iPod Touch 3'
-    - regex: '(?:Apple-)?iPod4[C,]1'
+    - regex: '(?:Apple-)?iPod4[C,_]?1'
       model: 'iPod Touch 4'
-    - regex: '(?:Apple-)?iPod5[C,]1'
+    - regex: '(?:Apple-)?iPod5[C,_]?1'
       model: 'iPod Touch 5'
-    - regex: '(?:Apple-)?iPod7[C,]1'
+    - regex: '(?:Apple-)?iPod7[C,_]?1'
       model: 'iPod Touch 6'
+    - regex: '(?:Apple-)?iPod9[C,_]?1|iPodTouch7'
+      model: 'iPod Touch 7'
     - regex: '(?:Apple-)?iPod'
       model: 'iPod Touch'
 
@@ -29,14 +31,24 @@ Cowon:
   device: 'portable media player'
   model: '$1'
 
+# FiiO (https://www.fiio.com/)
+FiiO:
+  regex: 'FiiO'
+  device: 'portable media player'
+  models:
+    - regex: 'M11 Plus LTD'
+      model: 'M11 Plus LTD'
+    - regex: 'FiiO M(11S|1[157]|6)'
+      model: 'M$1'
+
 Microsoft:
   regex: 'Microsoft ZuneHD'
   device: 'portable media player'
   model: 'Zune HD'
 
 Panasonic:
-  device: 'portable media player'
   regex: '(SV-MV100)'
+  device: 'portable media player'
   model: '$1'
 
 Samsung:
@@ -52,8 +64,73 @@ Samsung:
     - regex: 'YP-GI1'
       model: 'Galaxy Player 4.2'
     - regex: 'YP-GP1'
-      model: 'Galaxy Player 5.8 '
+      model: 'Galaxy Player 5.8'
     - regex: 'YP-G50'
       model: 'Galaxy Player 50'
     - regex: 'YP-GB70D'
       model: 'Galaxy Player 70 Plus'
+
+Wizz:
+  regex: '(DV-PTB1080)(?:[);/ ]|$)'
+  device: 'portable media player'
+  model: '$1'
+
+# Shanling
+Shanling:
+  regex: 'Shanling M6'
+  device: 'portable media player'
+  models:
+    - regex: 'Shanling (M6\(21\))'
+      model: '$1'
+
+# Sylvania
+Sylvania:
+  regex: '(SLTDVD102[34])'
+  device: 'portable media player'
+  model: '$1'
+
+# KuGou
+KuGou:
+  regex: 'KuGou[_ -](P5)'
+  device: 'portable media player'
+  model: '$1'
+
+# Surfans
+Surfans:
+  regex: '(Y57A)(?:[);/ ]|$)'
+  device: 'portable media player'
+  model: '$1'
+
+# Oilsky (oilsky.com.cn)
+Oilsky:
+  regex: 'Oilsky (M501|M303)(?:-Pro)?(?:[);/ ]|$)'
+  device: 'portable media player'
+  models:
+    - regex: 'M303-Pro'
+      model: 'M303 Pro'
+    - regex: '(M501|M303)'
+      model: '$1'
+
+# Diofox
+Diofox:
+  regex: 'Diofox[ _](M8|M10|M508)(?:[);/ ]|$)'
+  device: 'portable media player'
+  model: '$1'
+
+# MECHEN (mechen.com.cn)
+MECHEN:
+  regex: 'MECHEN'
+  device: 'portable media player'
+  models:
+    - regex: 'MECHEN[- _]([^;/)]+)[- _]Pro(?: Build|[);])'
+      model: '$1 Pro'
+    - regex: 'MECHEN[- _]([^;/)]+)(?: Build|[);])'
+      model: '$1'
+
+# Fanvace
+Fanvace:
+  regex: 'Fanvace'
+  device: 'portable media player'
+  models:
+    - regex: 'Fanvace[- _]([^;/)]+)(?: Build|[);])'
+      model: '$1'
