--- a/priv/ref_inspector/referers.yml
+++ b/priv/ref_inspector/referers.yml
@@ -74,6 +74,10 @@ email:
   163 Mail:
     domains:
       - mail.163.com
+  
+  1und1:
+    domains:
+      - deref-1und1-02.de
 
   2degrees:
     domains:
@@ -86,6 +90,7 @@ email:
   AOL Mail:
     domains:
       - mail.aol.com
+      - com.aol.mobile.aolapp # AOL for Android app
 
   Beeline:
     domains:
@@ -97,6 +102,12 @@ email:
       - webmail2.bigpond.com
       - email.telstra.com
       - basic.messaging.bigpond.com
+  
+  Bluewin:
+    domains:
+      - rich-v01.bluewin.ch
+      - rich-v02.bluewin.ch
+      - email.bluewin.ch
 
   Commander:
     domains:
@@ -115,6 +126,10 @@ email:
     domains:
       - mail.e1.ru
 
+  earthlink:
+    domains:
+      - com.earthlink.myearthlink # myEarthLink for Android app
+
   Freenet:
     domains:
       - webmail.freenet.de
@@ -122,16 +137,63 @@ email:
   Gmail:
     domains:
       - mail.google.com
+      - com.google.android.gm # Gmail for Android app
       - inbox.google.com
+  
+  GMX:
+    domains:
+      - deref-gmx.de
+      - deref-gmx.at
+      - deref-gmx.ch
+      - deref-gmx.fr
+      - deref-gmx.es
+      - deref-gmx.it
+      - deref-gmx.com
+      - deref-gmx.net
+      - deref-gmx.co.uk
+      - lightmailer.gmx.de
+      - lightmailer.gmx.at
+      - lightmailer.gmx.ch
+      - lightmailer.gmx.fr
+      - lightmailer.gmx.es
+      - lightmailer.gmx.it
+      - lightmailer.gmx.com
+      - lightmailer.gmx.net
+      - lightmailer.gmx.co.uk
+      - lightmailer-bs.gmx.net
+      - lightmailer-bap.gmx.net
 
   iiNet:
     domains:
       - webmail.iinet.net.au
       - mail.iinet.net.au
+  
+  Ionos:
+    domains:
+      - email.ionos.de
+      - email.ionos.es
+      - email.ionos.fr
+      - email.ionos.it
+      - email.ionos.ca
+      - email.ionos.mx
+      - email.ionos.com
+      - email.ionos.co.uk
+      - mailbusiness.ionos.de
+      - mailbusiness.ionos.es
+      - mailbusiness.ionos.fr
+      - mailbusiness.ionos.it
+      - mailbusiness.ionos.ca
+      - mailbusiness.ionos.mx
+      - mailbusiness.ionos.com
+      - mailbusiness.ionos.co.uk
 
   Inbox.com:
     domains:
       - inbox.com
+  
+  Infomaniak:
+    domains:
+      - mail.infomaniak.com
 
   iPrimus:
     domains:
@@ -141,6 +203,16 @@ email:
     domains:
       - e.mail.ru
       - touch.mail.ru
+  
+  Mail.com:
+    domains:
+      - deref-mail.com
+      - 3c-lxa.mail.com
+      - lightmailer.mail.com
+
+  Mailchimp:
+    domains:
+      - com.mailchimp.mailchimp # Mailchimp app for Android
 
   Mastermail:
     domains:
@@ -167,11 +239,21 @@ email:
   Orange Webmail:
     domains:
       - orange.fr/webmail
+      - mail01.orange.fr
+      - mail02.orange.fr
+      - wmail.orange.fr
+      - messageriepro3.orange.fr
+      - messagerie.orange.fr 
 
   Outlook.com:
     domains:
       - mail.live.com
       - outlook.live.com
+      - com.microsoft.office.outlook # Outlook for Android app
+  
+  Proton:
+    domains:
+      - mail.proton.me
 
   QIP:
     domains:
@@ -184,7 +266,7 @@ email:
 
   Rambler:
     domains:
-      - mail.rambler.ru
+      - mail.rambler.ru 
 
   Seznam Mail:
     domains:
@@ -193,10 +275,22 @@ email:
   Sibmail:
     domains:
       - sibmail.com
+  
+  T-online:
+    domains:
+      - email.t-online.de
+  
+  TIM:
+    domains:
+      - webmail.tim.it
 
   Ukr.net:
     domains:
       - mail.ukr.net
+  
+  UPC:
+    domains:
+      - upcmail.hispeed.ch
 
   Virgin:
     domains:
@@ -205,10 +299,19 @@ email:
   Vodafone:
     domains:
       - webmail.vodafone.co.nz
+      - mail.vodafone.de
 
   Westnet:
     domains:
       - webmail.westnet.com.au
+  
+  Web.de:
+    domains:
+      - deref-web.de
+      - 3c.web.de
+      - 3c-bap.web.de
+      - lightmailer-bap.web.de
+      - lightmailer-bs.web.de
 
   Yandex:
     domains:
@@ -224,6 +327,7 @@ email:
       - mail.yahoo.com
       - mail.yahoo.co.uk
       - mail.yahoo.co.jp
+      - com.yahoo.mobile.client.android.mail # Yahoo Mail for Android app
 
   Zoho:
     domains:
@@ -242,6 +346,7 @@ social:
       - m.facebook.com
       - l.facebook.com
       - lm.facebook.com
+      - com.facebook.katana # Facebook for Android app
 
   Qzone:
     domains:
@@ -255,11 +360,23 @@ social:
     domains:
       - twitter.com
       - t.co
+      - com.twitter.android # Twitter for Android app
+
+  Lnk.Bio:
+    domains:
+      - lnk.bio # Supercharge your link in bio on Instagram, TikTok, YouTube
 
   Instagram:
     domains:
       - instagram.com
       - l.instagram.com
+      - com.instagram.android # Instagram for Android app
+
+  Threads:
+    domains:
+      - threads.net
+      - l.threads.net
+      - com.instagram.barcelona # Threads for Android app
 
   Youtube:
     domains:
@@ -280,6 +397,7 @@ social:
 
   LinkedIn:
     domains:
+      - com.linkedin.android # LinkedIn for Android app
       - linkedin.com
       - lnkd.in
 
@@ -430,7 +548,28 @@ social:
 
   Pinterest:
     domains:
+      - pinterest.ca
+      - pinterest.cl
+      - pinterest.co.kr
       - pinterest.com
+      - pinterest.com.au
+      - pinterest.co.uk
+      - pinterest.de
+      - pinterest.dk
+      - pinterest.es
+      - pinterest.fr
+      - pinterest.jp
+      - pinterest.nz
+      - pinterest.pt
+      - pinterest.se
+      - pinterest.at
+      - pinterest.ch
+      - pinterest.com.mx
+      - pinterest.ie
+      - pinterest.it
+      - pinterest.ph
+      - pinterest.ru
+      - com.pinterest
 
   Plaxo:
     domains:
@@ -451,6 +590,10 @@ social:
   Taringa!:
     domains:
       - taringa.net
+
+  TikTok:
+    domains:
+      - tiktok.com
 
   Tumblr:
     domains:
@@ -504,10 +647,19 @@ social:
   Reddit:
     domains:
       - reddit.com
+      - io.syncapps.lemmy_sync
+      - com.laurencedawson.reddit_sync
+      - com.laurencedawson.reddit_sync.pro
+
+  Tildes:
+    domains:
+      - tildes.net
+      - com.talklittle.android.tildes # Three Cheers for Tildes for Android app
 
   Hacker News:
     domains:
       - news.ycombinator.com
+      - io.github.hidroh.materialistic # Materialistic for Android app
 
   Identi.ca:
     domains:
@@ -572,13 +724,39 @@ social:
     domains:
       - web.skype.com
 
+  Slack:
+    domains:
+      - app.slack.com
+      - com.slack # Slack for Android app
+
+  Snapchat:
+    domains:
+      - com.snapchat.android # Snapchat for Android app
+      - snapchat.com
+
+  Telegram:
+    domains:
+      - web.telegram.org
+      - org.telegram.messenger # Telegram for Android app
+      - org.telegram.messenger.web # Telegram for Android app (direct APK)
+      - org.aka.messenger # aka for Android app
+      - org.telegram.biftogram # BGram for Android app
+      - org.telegram.plus # Plus Messenger for Android app
+
   WhatsApp:
     domains:
       - web.whatsapp.com
+      - com.whatsapp
 
   Whirlpool:
     domains:
       - forums.whirlpool.net.au
+  
+  Workplace:
+    domains:
+      - l.workplace.com
+      - lm.workplace.com
+
 
 # #######################################################################################################
 #
@@ -602,9 +780,9 @@ search:
 
   1und1:
     parameters:
-      - su
+      - q
     domains:
-      - search.1und1.de
+      - suche.1und1.de
 
   2gis:
     domains:
@@ -812,8 +990,8 @@ search:
     parameters:
       - q
     domains:
-     - search.babylon.com
-     - searchassist.babylon.com
+      - search.babylon.com
+      - searchassist.babylon.com
 
   Baidu:
     parameters:
@@ -879,6 +1057,12 @@ search:
       - searchTerm
     domains:
       - search.bluewin.ch
+  
+  Brave:
+    parameters:
+      - q
+    domains:
+      - search.brave.com
 
   British Telecommunications:
     parameters:
@@ -916,6 +1100,12 @@ search:
       - question
     domains:
       - pesquisa.clix.pt
+
+  Coccoc:
+    parameters:
+      - q
+    domains:
+      - coccoc.com
 
   Conduit:
     parameters:
@@ -1656,6 +1846,7 @@ search:
       - encrypted.google.com
       # Syndicated search
       - googlesyndicatedsearch.com
+      - com.google.android.googlequicksearchbox # Google for Android app
 
   Google Blogsearch:
     parameters:
@@ -2927,6 +3118,15 @@ search:
     domains:
       - inbox.com/search/
 
+  Indeed:
+    domains:
+      - de.indeed.com
+      - at.indeed.com
+      - fr.indeed.com
+      - it.indeed.com
+      - ch.indeed.com
+      - au.indeed.com
+
   InfoSpace:
     parameters:
       - q
@@ -3039,6 +3239,12 @@ search:
       - www.toile.com
       - web.toile.com
 
+  Lilo:
+    parameters:
+      - q
+    domains:
+      - search.lilo.org
+
   Liveinternet:
     parameters:
       - q
@@ -3098,7 +3304,7 @@ search:
     domains:
       - maxwebsearch.com
 
-  Meta:
+  Meta.ua:
     parameters:
       - q
     domains:
@@ -3137,6 +3343,21 @@ search:
     domains:
       - www.mister-wong.com
       - www.mister-wong.de
+
+  Monster:
+    parameters:
+      - q
+    domains:
+      - www.monster.be
+      - www.monster.cz
+      - www.monster.de
+      - www.monster.fi
+      - www.monster.fr
+      - www.monster.ie
+      - www.monster.it
+      - www.monster.lu
+      - www.monster.ch
+      - www.monster.co.uk
 
   Monstercrawler:
     parameters:
@@ -3453,6 +3674,16 @@ search:
       - q
     domains:
       - www.startsiden.no
+
+  StepStone:
+    domains:
+      - www.stepstone.de
+      - www.stepstone.at
+      - www.stepstone.be
+      - www.stepstone.fr
+      - www.stepstone.nl
+      - www.stepstone.dk
+      - www.stepstone.se
 
   suche.info:
     parameters:
@@ -3949,9 +4180,14 @@ paid:
       - www.googleadservices.com
       - partner.googleadservices.com
       - googleads.g.doubleclick.net
+      - tdsf.doubleclick.net
       - tpc.googlesyndication.com
+      - safeframe.googlesyndication.com
       - googleadservices.com
       - imasdk.googleapis.com
+      - www.adsensecustomsearchads.com
+      - syndicatedsearch.goog
+      - pagead2.googlesyndication.com
 
   LifeStreet:
     domains:
